<resources>
    <string name="app_name">LivFlow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="action_settings">Settings</string>

    <string name="nav_short_task_en">Short Term Tasks</string>
    <string name="nav_long_task_en">Long Term Tasks</string>
    <string name="nav_task_calendar_en">Tasks Calendar</string>
    <string name="nav_daily_record_en">Daily Life Record</string>
    <string name="nav_data_sync_en">Synchronize Data</string>
    <string name="nav_check_update_en">Check Updates</string>
    <string name="nav_settings_en">Settings</string>

    <string name="nav_short_task_cn">短期任务</string>
    <string name="nav_long_task_cn">长期任务</string>
    <string name="nav_task_calendar_cn">任务日历</string>
    <string name="nav_daily_record_cn">起居注</string>
    <string name="nav_data_sync_cn">数据同步</string>
    <string name="nav_check_update_cn">检查更新</string>
    <string name="nav_settings_cn">设置</string>

    <string name="long_task_bottom_detail_en">Detail</string>
    <string name="long_task_bottom_nodes_en">Nodes</string>

    <string name="long_task_bottom_detail_cn">详细信息</string>
    <string name="long_task_bottom_nodes_cn">节点列表</string>
</resources>
