<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_short_task"
            android:icon="@drawable/ic_today_theme_color_24dp"
            android:title="@string/nav_short_task_en"/>
        <item
            android:id="@+id/nav_long_task"
            android:icon="@drawable/ic_date_range_theme_color_24dp"
            android:title="@string/nav_long_task_en"/>
        <item
            android:id="@+id/nav_task_calendar"
            android:icon="@drawable/ic_event_note_theme_color_24dp"
            android:title="@string/nav_task_calendar_en"/>
        <item
            android:id="@+id/nav_daily_record"
            android:icon="@drawable/ic_content_paste_theme_color_24dp"
            android:title="@string/nav_daily_record_en"/>
        <item
            android:id="@+id/nav_data_sync"
            android:icon="@drawable/ic_sync_theme_color_24dp"
            android:title="@string/nav_data_sync_en"/>
        <item
            android:id="@+id/nav_check_update"
            android:icon="@drawable/ic_system_update_theme_color_24dp"
            android:title="@string/nav_check_update_en"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_theme_color_24dp"
            android:title="@string/nav_settings_en"/>
    </group>

</menu>